--- a/example/src/App.css
+++ b/example/src/App.css
@@ -1,22 +1,15 @@
-.App {
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
 .App-header {
   background-color: #282c34;
-  font-size: calc(10px + 2vmin);
   color: white;
-  padding: 0 0;
+  padding: 16px;
 }
 
 .App-header div {
   padding: 8px 16px;
 }
 
-.App-link {
+a,
+a:visited {
   color: #09d3ac;
 }
 
@@ -45,52 +38,21 @@ section:hover {
 
 button {
   margin: 8px;
-  -moz-box-shadow: inset 0px 1px 0px 0px #bbdaf7;
-  -webkit-box-shadow: inset 0px 1px 0px 0px #bbdaf7;
-  box-shadow: inset 0px 1px 0px 0px #bbdaf7;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0.05, #79bbff),
-    color-stop(1, #378de5)
-  );
-  background: -moz-linear-gradient(top, #79bbff 5%, #378de5 100%);
-  background: -webkit-linear-gradient(top, #79bbff 5%, #378de5 100%);
-  background: -o-linear-gradient(top, #79bbff 5%, #378de5 100%);
-  background: -ms-linear-gradient(top, #79bbff 5%, #378de5 100%);
-  background: linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#378de5',GradientType=0);
-  background-color: #79bbff;
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
-  border-radius: 6px;
-  border: 1px solid #84bbf3;
+  background-color: #09d3ac;
+  border-radius: 3px;
   display: inline-block;
+  border:0;
   cursor: pointer;
-  color: #ffffff;
+  /* color: #ffffff; */
   font-family: Arial;
   font-size: 15px;
   font-weight: bold;
   padding: 6px 24px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #528ecc;
+  box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.45);
 }
 button:hover {
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0.05, #378de5),
-    color-stop(1, #79bbff)
-  );
-  background: -moz-linear-gradient(top, #378de5 5%, #79bbff 100%);
-  background: -webkit-linear-gradient(top, #378de5 5%, #79bbff 100%);
-  background: -o-linear-gradient(top, #378de5 5%, #79bbff 100%);
-  background: -ms-linear-gradient(top, #378de5 5%, #79bbff 100%);
-  background: linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff',GradientType=0);
-  background-color: #378de5;
+  box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.75);
 }
 button:active {
   position: relative;
@@ -118,27 +80,4 @@ pre {
 code {
   background-color: #efefef;
   padding: 2px 5px;
-}
-
-/* # nav menu */
-
-nav {
-  width: 100%;
-  border-bottom: 2px solid #ccc;
-  display: flex;
-  align-items: center;
-}
-
-nav ul li {
-  list-style-type: none;
-  display: inline-block;
-  margin: 5px;
-  border-bottom: 1px solid #ccc;
-  cursor: pointer;
-}
-
-nav ul li a {
-  padding: 5px;
-  color: white;
-  text-decoration: none;
 }
