--- a/example/src/App.css
+++ b/example/src/App.css
@@ -1,11 +1,21 @@
+.App {
+  max-width: 860px;
+  margin: auto;
+}
+
 .App-header {
   background-color: #282c34;
   color: white;
   padding: 16px;
-}
-
-.App-header div {
-  padding: 8px 16px;
+  top: 0;
+  left: 0;
+  margin: 0;
+  /* width: calc(100vw -32px); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  word-break: break-word;
 }
 
 a,
@@ -18,18 +28,24 @@ h3 {
   border-bottom: 1px solid #ccc;
 }
 
+h4 {
+  margin: 8px;
+}
+
 h2 {
-  margin-bottom: 0;
-  padding-bottom: 0px;
+  font-size: 1.2rem;
+}
+h1 {
+  font-size: 1.4rem;
+  margin-right: 8px;
 }
 
 section {
   border-bottom: 2px solid #ccc;
   padding: 8px 16px;
-  margin-top: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  margin: 16px;
+  margin: 8px;
 }
 
 section:hover {
@@ -37,11 +53,11 @@ section:hover {
 }
 
 button {
-  margin: 8px;
+  margin: 8px 2px;
   background-color: #09d3ac;
   border-radius: 3px;
   display: inline-block;
-  border:0;
+  border: 0;
   cursor: pointer;
   /* color: #ffffff; */
   font-family: Arial;
@@ -49,10 +65,10 @@ button {
   font-weight: bold;
   padding: 6px 24px;
   text-decoration: none;
-  box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.45);
+  box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.45);
 }
 button:hover {
-  box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.75);
+  box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.75);
 }
 button:active {
   position: relative;
@@ -80,4 +96,10 @@ pre {
 code {
   background-color: #efefef;
   padding: 2px 5px;
+}
+
+.flash {
+  box-shadow: 0 0 8px 1px #09d3ac;
+  background-color: #09d3ac33;
+  transition: box-shadow 50ms ease-out;
 }
