--- a/example/src/App.css
+++ b/example/src/App.css
@@ -1,3 +1,9 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
 .App {
   max-width: 860px;
   margin: auto;
@@ -10,7 +16,6 @@
   top: 0;
   left: 0;
   margin: 0;
-  /* width: calc(100vw -32px); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,7 +50,8 @@ section {
   padding: 8px 16px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  margin: 8px;
+  margin: 16px 8px;
+  border-radius: 5px;
 }
 
 section:hover {
